--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.76.1",
     "leaflet": "^1.9.4",
     "next": "15.5.6",
     "prettier": "^3.6.2",
