--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@supabase/supabase-js": "^2.76.1",
     "@types/react-leaflet": "^2.8.3",
     "leaflet": "^1.9.4",
-    "next": "15.5.6",
+    "lucide-react": "^0.555.0",
+    "next": "^15.5.7",
     "prettier": "^3.6.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
