--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@types/react-leaflet": "^2.8.3",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.555.0",
-    "next": "^15.5.7",
+    "next": "15.5.9",
     "prettier": "^3.6.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-leaflet": "^5.0.0"
+    "react-leaflet": "^5.0.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
