--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@mantine/core": "^8.3.9",
-    "@supabase/supabase-js": "^2.76.1",
+    "@supabase/supabase-js": "2.90.1",
     "@tabler/icons-react": "^3.36.1",
     "@types/react-leaflet": "^2.8.3",
     "leaflet": "^1.9.4",
@@ -21,6 +21,7 @@
     "react-dom": "19.1.0",
     "react-leaflet": "^5.0.0",
     "react-leaflet-markercluster": "^5.0.0-rc.0",
+    "supabase": "^2.72.3",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
